fix(popupwithfilters.module.css): add css rule scrollbar-width

--- a/src/components/PopupWithFilters/PopupWithFilters.module.css
+++ b/src/components/PopupWithFilters/PopupWithFilters.module.css
@@ -58,6 +58,7 @@
 	gap: 28px;
 	max-height: 400px;
 	overflow-y: scroll;
+	scrollbar-width: none;
 }
 
 .filters::-webkit-scrollbar {
